k3s/azerdev-status/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azerdev-status
  namespace: redirects
  labels:
    app: azerdev-status
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: azerdev-status
  template:
    metadata:
      labels:
        app: azerdev-status
    spec:
      imagePullSecrets:
        - name: regcred-azerdev-status
      containers:
        - name: azerdev-status
          image: ghcr.io/enoal-fauchille-bolle/redirector:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
