k3s/azerdev-status/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azerdev-status-svc
  namespace: redirects
spec:
  selector:
    app: azerdev-status
  ports:
    - name: http
      port: 80
      targetPort: 80
