k3s/azerdev-status/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azerdev-status-ingress
  namespace: redirects
spec:
  rules:
    - host: azerdev-status.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: azerdev-status-svc
                port:
                  number: 80
